Thu Nov 20 02:32:34 2014  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Add Vector#angle_with
	  Patch by Egunov Dmitriy [#10442]

Thu Nov 20 02:10:31 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (ripper_flush_string_content, parser_parse_string):
	  preserve parsed string content.

	* parse.y (ripper_new_yylval): abstract function to create ripper
	  wrapper, and make it able to hold another object.

Thu Nov 20 01:00:59 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (reg_named_capture_assign_gen): use predefined ID
	  instead of rb_intern.

Thu Nov 20 00:54:57 2014  Tanaka Akira  <akr@fsij.org>

	* internal.h (ruby_init_setproctitle): Declare here.

Thu Nov 20 00:26:37 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_here_document): append byte sequence directly to
	  the delayed content instead of creating an intermediate string
	  object.

Wed Nov 19 21:11:01 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk (ext/json/parser/parser.c): don't touch parse.c,
	  ruby repo is a downstream.

Wed Nov 19 20:38:11 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk (ext/ripper/ripper.c): use $(PWD) to get
	  <build-directory>/ext/ripper.

Wed Nov 19 18:12:17 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/downloader.rb (RubyGems.download): Don't download gem if the
	  version is already downloaded. A gem file is versioned and
	  it must be identical if the version is the same.

Wed Nov 19 17:59:25 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk (ext/ripper/ripper.c): pass build directory as VPATH.

	* ext/ripper/depend (.y.c): use VPATH for y.tab.c.

Wed Nov 19 10:07:57 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* template/prelude.c.tmpl (Prelude#translate): strip VPATH prefix
	  from prelude names, so that srcdir diffrences do not make the
	  generated code diffrent.

Wed Nov 19 07:45:11 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_write): should set the error of