@@ -173,6 +173,7 @@ with all sufficient information, see the ChangeLog file.
     * Vector#cross_product generalized to arbitrary dimensions.
     * Vector#dot and #cross are aliases for #inner_product and #cross_product.
     * Vector#angle_with returns the angle with its argument
+    * New instance and class method independent? to test linear independence.
 
 * Pathname
   * Pathname#/ is aliased to Pathname#+.
